[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "ols"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
version = "0.1.0"
description = "OLS in Rust"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24.4",
]


[tool.maturin]
features = ["pyo3/extension-module"]
